--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,9 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@react-spring/web": "^10.0.1",
     "@types/js-cookie": "^3.0.6",
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,6 +48,7 @@
     "input-otp": "latest",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.12",
     "next": "^14.2.30",
     "next-themes": "latest",
     "react": "^18",
@@ -55,7 +58,7 @@
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
     "zod": "^3.24.1"
