--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "latest",
     "@react-spring/web": "^10.0.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/qrcode": "^1.5.5",
     "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -51,10 +52,12 @@
     "motion": "^12.23.12",
     "next": "^14.2.30",
     "next-themes": "latest",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
     "react-hook-form": "latest",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "latest",
     "recharts": "latest",
     "sonner": "latest",
