--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "multer": "^2.0.2",
+    "nodemailer": "^6.10.1",
     "telegram": "^2.26.22"
   }
 }
